fix overflow for checkout area

--- a/src/components/Booking/CheckoutArea.css
+++ b/src/components/Booking/CheckoutArea.css
@@ -13,6 +13,7 @@ ul {
     border-radius: 5px;
     margin-bottom: 10%;
     list-style-type: none;
+    overflow-y: auto;
 }
 
 ul li {
